--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".activity.RegistrationActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ResetPasswordActivity" />
+        <activity android:name=".activity.ReportSwarmActivity" />
     </application>
 
 </manifest>
